Add button to toggle dark mode

--- a/Examples/Examples/Base.lproj/Main.storyboard
+++ b/Examples/Examples/Base.lproj/Main.storyboard
@@ -715,9 +715,29 @@
                             <stackView orientation="horizontal" alignment="centerY" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lGn-ls-02I">
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="25"/>
                                 <edgeInsets key="edgeInsets" left="8" right="8" top="0.0" bottom="0.0"/>
-                                <beginningViews>
+                                <endViews>
+                                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hCk-R3-sb4">
+                                        <rect key="frame" x="224" y="-4" width="75" height="32"/>
+                                        <buttonCell key="cell" type="push" title="Dark" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="6br-4z-Mdg">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="toggleDarkMode:" target="XfG-lQ-9wD" id="Rcn-tb-DjT"/>
+                                        </connections>
+                                    </button>
+                                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YAB-VC-iD8">
+                                        <rect key="frame" x="293" y="-4" width="107" height="32"/>
+                                        <buttonCell key="cell" type="push" title="Fill with text" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Hvh-a8-vz2">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="fillWithTextPressed:" target="XfG-lQ-9wD" id="fAJ-O6-o4O"/>
+                                        </connections>
+                                    </button>
                                     <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fv0-7b-MQU">
-                                        <rect key="frame" x="5" y="-1" width="78" height="25"/>
+                                        <rect key="frame" x="398" y="-1" width="78" height="25"/>
                                         <popUpButtonCell key="cell" type="push" title="JSON" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" arrowPosition="arrowAtCenter" selectedItem="id1-cp-7pV" id="JAw-BR-BeO">
                                             <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="menu"/>
@@ -733,22 +753,14 @@
                                             <action selector="languageChanged:" target="XfG-lQ-9wD" id="t2G-0b-LTl"/>
                                         </connections>
                                     </popUpButton>
-                                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YAB-VC-iD8">
-                                        <rect key="frame" x="80" y="-4" width="107" height="32"/>
-                                        <buttonCell key="cell" type="push" title="Fill with text" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Hvh-a8-vz2">
-                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                            <font key="font" metaFont="system"/>
-                                        </buttonCell>
-                                        <connections>
-                                            <action selector="fillWithTextPressed:" target="XfG-lQ-9wD" id="fAJ-O6-o4O"/>
-                                        </connections>
-                                    </button>
-                                </beginningViews>
+                                </endViews>
                                 <visibilityPriorities>
+                                    <integer value="1000"/>
                                     <integer value="1000"/>
                                     <integer value="1000"/>
                                 </visibilityPriorities>
                                 <customSpacing>
+                                    <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
                                 </customSpacing>
