--- a/Examples/Examples/Base.lproj/Main.storyboard
+++ b/Examples/Examples/Base.lproj/Main.storyboard
@@ -716,6 +716,17 @@
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="25"/>
                                 <edgeInsets key="edgeInsets" left="8" right="8" top="0.0" bottom="0.0"/>
                                 <endViews>
+                                    <button verticalHuggingPriority="750" id="3nP-d3-QkR">
+                                        <rect key="frame" x="71" y="4" width="58" height="18"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <buttonCell key="cell" type="check" title="Wrap" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="8ji-ed-waF">
+                                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="lineWrappingPressed:" target="XfG-lQ-9wD" id="LSG-GL-C0j"/>
+                                        </connections>
+                                    </button>
                                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DFX-Ho-8k2">
                                         <rect key="frame" x="135" y="4" width="88" height="18"/>
                                         <buttonCell key="cell" type="check" title="Read Only" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="sjm-m8-ZcR">
@@ -769,8 +780,10 @@
                                     <integer value="1000"/>
                                     <integer value="1000"/>
                                     <integer value="1000"/>
+                                    <integer value="1000"/>
                                 </visibilityPriorities>
                                 <customSpacing>
+                                    <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
@@ -792,6 +805,7 @@
                     <connections>
                         <outlet property="codeMirrorView" destination="abZ-cT-WvM" id="f4L-Sj-2tQ"/>
                         <outlet property="languagePopupButton" destination="fv0-7b-MQU" id="sRk-Rg-44N"/>
+                        <outlet property="lineWrappingButton" destination="3nP-d3-QkR" id="BzG-NX-TLs"/>
                         <outlet property="readOnlyButton" destination="DFX-Ho-8k2" id="ytM-1k-yDv"/>
                     </connections>
                 </viewController>
