--- a/Examples/Examples/Base.lproj/Main.storyboard
+++ b/Examples/Examples/Base.lproj/Main.storyboard
@@ -706,18 +706,18 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="EditorViewController" customModule="Examples" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="607" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="abZ-cT-WvM" customClass="CodeMirrorWebView" customModule="CodeMirror">
-                                <rect key="frame" x="0.0" y="25" width="480" height="245"/>
+                                <rect key="frame" x="0.0" y="25" width="607" height="245"/>
                             </customView>
                             <stackView orientation="horizontal" alignment="centerY" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lGn-ls-02I">
-                                <rect key="frame" x="0.0" y="0.0" width="480" height="25"/>
+                                <rect key="frame" x="0.0" y="0.0" width="607" height="25"/>
                                 <edgeInsets key="edgeInsets" left="8" right="8" top="0.0" bottom="0.0"/>
-                                <endViews>
+                                <beginningViews>
                                     <button verticalHuggingPriority="750" id="3nP-d3-QkR">
-                                        <rect key="frame" x="71" y="4" width="58" height="18"/>
+                                        <rect key="frame" x="6" y="4" width="58" height="18"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <buttonCell key="cell" type="check" title="Wrap" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="8ji-ed-waF">
                                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -728,7 +728,7 @@
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DFX-Ho-8k2">
-                                        <rect key="frame" x="135" y="4" width="88" height="18"/>
+                                        <rect key="frame" x="70" y="4" width="88" height="18"/>
                                         <buttonCell key="cell" type="check" title="Read Only" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="sjm-m8-ZcR">
                                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                             <font key="font" metaFont="system"/>
@@ -737,8 +737,10 @@
                                             <action selector="readOnlyPressed:" target="XfG-lQ-9wD" id="WNu-7Z-gRq"/>
                                         </connections>
                                     </button>
+                                </beginningViews>
+                                <endViews>
                                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hCk-R3-sb4">
-                                        <rect key="frame" x="224" y="-4" width="75" height="32"/>
+                                        <rect key="frame" x="351" y="-4" width="75" height="32"/>
                                         <buttonCell key="cell" type="push" title="Dark" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="6br-4z-Mdg">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system"/>
@@ -748,7 +750,7 @@
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YAB-VC-iD8">
-                                        <rect key="frame" x="293" y="-4" width="107" height="32"/>
+                                        <rect key="frame" x="420" y="-4" width="107" height="32"/>
                                         <buttonCell key="cell" type="push" title="Fill with text" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Hvh-a8-vz2">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system"/>
@@ -758,7 +760,7 @@
                                         </connections>
                                     </button>
                                     <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fv0-7b-MQU">
-                                        <rect key="frame" x="398" y="-1" width="78" height="25"/>
+                                        <rect key="frame" x="525" y="-1" width="78" height="25"/>
                                         <popUpButtonCell key="cell" type="push" title="JSON" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" arrowPosition="arrowAtCenter" selectedItem="id1-cp-7pV" id="JAw-BR-BeO">
                                             <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="menu"/>
